--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <a href="https://x.com/bigblackclydes?s=21" target="_blank">https://x.com/bigblackclydes?s=21</a>
       </span>
       <br>
-      Telegram: <span style="opacity:0.7;">coming soon</span><br>
+      Telegram: <a href="https://t.me/+sfkNTiHgaHk0OTIx" style="opacity:0.7;">Join Telegram</a><br>
       Pump.fun / DEX link: <span style="opacity:0.7;">coming soon</span>
     </p>
   </div>
