--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
       <h2>$BBC</h2>
       <p>
-        Dogs and caats move out the way its horse season. Pure power, dark legend, and unstoppable
+        Dogs and cats move out the way its horse season. Pure power, dark legend, and unstoppable
         momentum — all carried by a towering Big Black Clydesdale charging through the blockchain.
       </p>
     </div>
