--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <body>
 
 <header>
-  <h1>$BBC</h1>
+  <h1>$CLYDE</h1>
   <nav>
     <a href="#about">About</a>
     <a href="#lore">Lore</a>
@@ -199,7 +199,7 @@
         <div class="hero-badge-dot"></div>
         <span>Big Black Clydesdale · $BBC</span>
       </div>
-      <h2>$BBC</h2>
+      <h2>$CLYDE</h2>
       <p>
         Dogs and cats move out the way its horse season. Pure power, dark legend, and unstoppable
         momentum — all carried by a towering Big Black Clydesdale charging through the blockchain.
@@ -212,7 +212,7 @@
   </section>
 
   <section id="about" class="section">
-    <h3>What is $BBC?</h3>
+    <h3>What is $CLYDE?</h3>
     <div class="section-inner">
       <p>
         Not your typical $BBC, this Big Black Clydesdale is a meme token for people who want to be taken on a journey by an iconic,
