--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         For centuries, whispers told of a rare and mighty Black Clydesdale — a colossal horse said to appear
         only when fortune was about to change. Its coat was darker than midnight and its stride shook the earth
         beneath it. Villages that witnessed its thunderous arrival believed prosperity would follow in its wake.
-        Emerging in the year of the horse that legend rides again as $BBC, a meme channeling the power, mystery, and unstoppable drive of
+        Emerging in the year of the horse that legend rides again as $CLYDE, a meme channeling the power, mystery, and unstoppable drive of
         this mythical beast into the heart of the blockchain.....No saddle required
       </p>
     </div>
