--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
     <h3>What is $CLYDE?</h3>
     <div class="section-inner">
       <p>
-        Not your typical $BBC, this Big Black Clydesdale is a meme token for people who want to be taken on a journey by an iconic,
-        unforgettable and unstoppable $BBC. A community where people can come together to support the ultimate $BBC....
+        Not your typical BBC, this Big Black Clydesdale is a meme token for people who want to be taken on a journey by an iconic,
+        unforgettable and unstoppable BBC. A community where people can come together to support the ultimate BBC....
       </p>
     </div>
   </section>
@@ -238,7 +238,7 @@
   <h3>Socials & links</h3>
   <div class="section-inner">
     <p style="margin-bottom:8px; opacity:0.9;">
-      Plug into the herd. Follow the journey, watch the legend grow, and ride this $BBC.
+      Plug into the herd. Follow the journey, watch the legend grow, and ride this BBC.
     </p>
     <p style="font-size:15px; opacity:0.85;">
       X (Twitter): 
