--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Big Black Clydesdale ($BBC)</title>
+  <title>CLYDE The Big Black Clydesdale (BBC)</title>
   <style>
     * {
       box-sizing: border-box;
