--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 </main>
 
 <footer>
-  © 2026 Big Black Clydesdale ($BBC). All rights reserved.
+  © 2026 Big Black Clydesdale ($CLYDE). All rights reserved.
 </footer>
 
 </body>
