--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <h3>Socials & links</h3>
   <div class="section-inner">
     <p style="margin-bottom:8px; opacity:0.9;">
-      Plug into the herd. Follow the journey, watch the legend grow, and ride this BBC.
+      Plug into the herd. Follow the journey, watch the legend grow, and ride this BBC into the millions.
     </p>
     <p style="font-size:15px; opacity:0.85;">
       X (Twitter): 
