--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="hero-text">
       <div class="hero-badge">
         <div class="hero-badge-dot"></div>
-        <span>Big Black Clydesdale · $BBC</span>
+        <span>Big Black Clydesdale · $CLYDE</span>
       </div>
       <h2>$CLYDE</h2>
       <p>
@@ -240,17 +240,27 @@
     <p style="margin-bottom:8px; opacity:0.9;">
       Plug into the herd. Follow the journey, watch the legend grow, and ride this BBC into the millions.
     </p>
+
     <p style="font-size:15px; opacity:0.85;">
       X (Twitter): 
-      <span style="opacity:0.7;">
-        <a href="https://x.com/bigblackclydes?s=21" target="_blank">https://x.com/bigblackclydes?s=21</a>
-      </span>
+      <a href="https://x.com/bigblackclydes?s=21" target="_blank" style="opacity:0.7;">
+        https://x.com/bigblackclydes?s=21
+      </a>
       <br>
-      Telegram: <a href="https://t.me/bigblackclydesdale" style="opacity:0.7;">Join Telegram</a><br>
-      Pump.fun / DEX link: <span style="opacity:0.7;">coming soon</span>
+
+      Telegram: 
+      <a href="https://t.me/bigblackclydesdale" target="_blank" style="opacity:0.7;">
+        Join Telegram
+      </a>
+      <br>
+
+      Pump.fun / DEX link: 
+      <span style="opacity:0.7;">coming soon</span>
     </p>
   </div>
 </section>
+
+
 
 </main>
 
